[gd_scene load_steps=10 format=3 uid="uid://dti1m0aah2nuu"]

[ext_resource type="Script" path="res://addons/gd_data/scripts/main_container.gd" id="1_jhusq"]
[ext_resource type="Script" path="res://addons/gd_data/scripts/helpers/tree.gd" id="2_0a5mi"]
[ext_resource type="CodeHighlighter" uid="uid://dmubdssgydbuj" path="res://addons/gd_data/themes/code_highlighter.tres" id="6_4h5mt"]
[ext_resource type="Script" path="res://addons/gd_data/scripts/helpers/expression_edit.gd" id="7_csrwa"]
[ext_resource type="PackedScene" uid="uid://b3c43v5fyvyd" path="res://addons/gd_data/scenes/sheet_grid_tree.tscn" id="10_ndlep"]
[ext_resource type="Script" path="res://addons/gd_data/scripts/editor_container.gd" id="10_t1qcf"]

[sub_resource type="Image" id="Image_j4ktl"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 93, 93, 55, 255, 97, 97, 58, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 98, 98, 47, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 94, 94, 46, 255, 93, 93, 236, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_1vflv"]
image = SubResource("Image_j4ktl")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lkw75"]

[node name="MainContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jhusq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 2073.0
offset_bottom = 47.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 2065.0
offset_bottom = 39.0

[node name="ImportButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 24.0
offset_bottom = 31.0
theme_override_constants/h_separation = 8
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="ExportButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 28.0
offset_right = 52.0
offset_bottom = 31.0
theme_override_constants/h_separation = 8
disabled = true
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="ProjectPathLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 56.0
offset_top = 4.0
offset_right = 1862.0
offset_bottom = 27.0
size_flags_horizontal = 3
vertical_alignment = 1

[node name="AutosaveButton" type="CheckButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1866.0
offset_right = 1986.0
offset_bottom = 31.0
text = "Autosave"

[node name="VersionLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1990.0
offset_top = 2.0
offset_right = 2057.0
offset_bottom = 28.0
text = "Version: "

[node name="ProjectContainer" type="HSplitContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_top = 51.0
offset_right = 2073.0
offset_bottom = 1167.0
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="VSplitContainer" type="VSplitContainer" parent="ProjectContainer"]
layout_mode = 2
offset_right = 213.0
offset_bottom = 1116.0

[node name="SheetsTabContainer" type="TabContainer" parent="ProjectContainer/VSplitContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
offset_right = 213.0
offset_bottom = 400.0
clip_tabs = false

[node name="Sheets" type="VBoxContainer" parent="ProjectContainer/VSplitContainer/SheetsTabContainer"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ProjectContainer/VSplitContainer/SheetsTabContainer/Sheets"]
layout_mode = 2
offset_right = 284.0
offset_bottom = 31.0
alignment = 2

[node name="SearchSheetEdit" type="LineEdit" parent="ProjectContainer/VSplitContainer/SheetsTabContainer/Sheets/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_right = 200.0
offset_bottom = 31.0
size_flags_horizontal = 3
placeholder_text = "Search"
context_menu_enabled = false
clear_button_enabled = true
right_icon = SubResource("ImageTexture_1vflv")
caret_blink = true

[node name="UpdateSheetButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetsTabContainer/Sheets/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 204.0
offset_right = 228.0
offset_bottom = 31.0
tooltip_text = "Update selected sheet"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="RemoveSheetButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetsTabContainer/Sheets/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 232.0
offset_right = 256.0
offset_bottom = 31.0
tooltip_text = "Remove selected sheets"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="CreateSheetButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetsTabContainer/Sheets/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 260.0
offset_right = 284.0
offset_bottom = 31.0
tooltip_text = "Create new sheet"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="SheetTree" type="Tree" parent="ProjectContainer/VSplitContainer/SheetsTabContainer/Sheets"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 35.0
offset_right = 284.0
offset_bottom = 369.0
size_flags_vertical = 3
hide_root = true
select_mode = 2
script = ExtResource("2_0a5mi")

[node name="SheetTabContainer" type="TabContainer" parent="ProjectContainer/VSplitContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
offset_top = 412.0
offset_right = 213.0
offset_bottom = 1116.0
clip_tabs = false

[node name="Lines" type="VBoxContainer" parent="ProjectContainer/VSplitContainer/SheetTabContainer"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Lines"]
layout_mode = 2
offset_right = 284.0
offset_bottom = 31.0
alignment = 2

[node name="SearchLineEdit" type="LineEdit" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Lines/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_right = 200.0
offset_bottom = 31.0
size_flags_horizontal = 3
placeholder_text = "Search"
context_menu_enabled = false
clear_button_enabled = true
right_icon = SubResource("ImageTexture_1vflv")

[node name="UpdateLineButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Lines/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 204.0
offset_right = 228.0
offset_bottom = 31.0
tooltip_text = "Update selected line"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="RemoveLineButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Lines/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 232.0
offset_right = 256.0
offset_bottom = 31.0
tooltip_text = "Remove selected lines"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="CreateLineButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Lines/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 260.0
offset_right = 284.0
offset_bottom = 31.0
tooltip_text = "Create new line"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="LineTree" type="Tree" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Lines"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 35.0
offset_right = 284.0
offset_bottom = 673.0
size_flags_vertical = 3
hide_root = true
select_mode = 2
script = ExtResource("2_0a5mi")

[node name="Columns" type="VBoxContainer" parent="ProjectContainer/VSplitContainer/SheetTabContainer"]
visible = false
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.5
offset_top = 31.0
offset_right = 35.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Columns"]
layout_mode = 2
offset_right = 284.0
offset_bottom = 31.0
alignment = 2

[node name="SearchColumnEdit" type="LineEdit" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Columns/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_right = 200.0
offset_bottom = 31.0
size_flags_horizontal = 3
placeholder_text = "Search"
context_menu_enabled = false
clear_button_enabled = true
right_icon = SubResource("ImageTexture_1vflv")

[node name="UpdateColumnButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Columns/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 204.0
offset_right = 228.0
offset_bottom = 31.0
tooltip_text = "Update selected column"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="RemoveColumnButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Columns/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 232.0
offset_right = 256.0
offset_bottom = 31.0
tooltip_text = "Remove selected columns"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="CreateColumnButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Columns/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 260.0
offset_right = 284.0
offset_bottom = 31.0
tooltip_text = "Create new column"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="ColumnTree" type="Tree" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Columns"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 35.0
offset_right = 284.0
offset_bottom = 291.0
size_flags_vertical = 3
columns = 3
hide_root = true
select_mode = 2
script = ExtResource("2_0a5mi")

[node name="Tags" type="VBoxContainer" parent="ProjectContainer/VSplitContainer/SheetTabContainer"]
visible = false
layout_mode = 2
offset_left = 8.0
offset_top = 300.0
offset_right = 1152.0
offset_bottom = 589.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Tags"]
layout_mode = 2
offset_right = 1144.0
offset_bottom = 26.0
alignment = 2

[node name="SearchTagEdit" type="LineEdit" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Tags/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_right = 67.0625
offset_bottom = 31.0
size_flags_horizontal = 3
placeholder_text = "Search"
context_menu_enabled = false
clear_button_enabled = true
right_icon = SubResource("ImageTexture_1vflv")

[node name="UpdateTagButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Tags/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1064.0
offset_right = 1088.0
offset_bottom = 26.0
tooltip_text = "Update selected tag"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="RemoveTagButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Tags/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1092.0
offset_right = 1116.0
offset_bottom = 26.0
tooltip_text = "Remove selected tags"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="CreateTagButton" type="Button" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Tags/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1120.0
offset_right = 1144.0
offset_bottom = 26.0
tooltip_text = "Create new tag"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="TagTree" type="Tree" parent="ProjectContainer/VSplitContainer/SheetTabContainer/Tags"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 30.0
offset_right = 1144.0
offset_bottom = 289.0
size_flags_vertical = 3
hide_root = true
select_mode = 2
script = ExtResource("2_0a5mi")

[node name="MarginContainer" type="MarginContainer" parent="ProjectContainer"]
layout_mode = 2
offset_left = 221.0
offset_right = 2073.0
offset_bottom = 1116.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ProjectContainer/MarginContainer"]
layout_mode = 2
offset_right = 1844.0
offset_bottom = 1108.0

[node name="HBoxContainer1" type="HBoxContainer" parent="ProjectContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 1773.0
offset_bottom = 35.0

[node name="FilterExpressionEdit" type="CodeEdit" parent="ProjectContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 1745.0
offset_bottom = 35.0
size_flags_horizontal = 3
theme_type_variation = &"ExpressionEdit"
placeholder_text = "Filter expression"
context_menu_enabled = false
drag_and_drop_selection_enabled = false
highlight_all_occurrences = true
syntax_highlighter = ExtResource("6_4h5mt")
scroll_fit_content_height = true
caret_blink = true
auto_brace_completion_enabled = true
script = ExtResource("7_csrwa")

[node name="FilterExpressionButton" type="Button" parent="ProjectContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1749.0
offset_right = 1773.0
offset_bottom = 35.0
tooltip_text = "Search lines"
icon = SubResource("ImageTexture_1vflv")
flat = true

[node name="VSplitContainer" type="VSplitContainer" parent="ProjectContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 39.0
offset_right = 1773.0
offset_bottom = 1078.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 1000

[node name="SheetGridTree" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer" instance=ExtResource("10_ndlep")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1773.0
offset_bottom = 735.0
grow_horizontal = 1
grow_vertical = 1

[node name="EditorContainer" type="VBoxContainer" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 747.0
offset_right = 1773.0
offset_bottom = 1039.0
size_flags_vertical = 3
script = ExtResource("10_t1qcf")

[node name="HBoxContainer" type="HBoxContainer" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer/EditorContainer"]
layout_mode = 2
offset_right = 1773.0
offset_bottom = 26.0

[node name="ObserversLabel" type="Label" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer/EditorContainer/HBoxContainer"]
layout_mode = 2
offset_right = 84.0
offset_bottom = 26.0
text = "Observers:"

[node name="EditorColumnSettings" type="HBoxContainer" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer/EditorContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 88.0
offset_right = 1745.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="EditorSetDefaultButton" type="Button" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer/EditorContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1749.0
offset_right = 1773.0
offset_bottom = 26.0
tooltip_text = "Set cell value as default"
icon = SubResource("ImageTexture_1vflv")

[node name="EditorValueContainer" type="PanelContainer" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer/EditorContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
offset_top = 30.0
offset_right = 1773.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_lkw75")

[node name="EditorExpressionContainer" type="HBoxContainer" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer/EditorContainer"]
layout_mode = 2
offset_top = 284.0
offset_right = 1773.0
offset_bottom = 319.0

[node name="EditorExpressionEdit" type="CodeEdit" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer/EditorContainer/EditorExpressionContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 1773.0
offset_bottom = 35.0
size_flags_horizontal = 3
theme_type_variation = &"ExpressionEdit"
placeholder_text = "Value expression"
editable = false
context_menu_enabled = false
drag_and_drop_selection_enabled = false
highlight_all_occurrences = true
syntax_highlighter = ExtResource("6_4h5mt")
scroll_fit_content_height = true
caret_blink = true
auto_brace_completion_enabled = true
script = ExtResource("7_csrwa")

[node name="EditorExpressionButton" type="Button" parent="ProjectContainer/MarginContainer/VBoxContainer/VSplitContainer/EditorContainer/EditorExpressionContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 1749.0
offset_right = 1773.0
offset_bottom = 35.0
grow_horizontal = 0
icon = SubResource("ImageTexture_1vflv")
icon_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ProjectContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 1082.0
offset_right = 1773.0
offset_bottom = 1108.0

[node name="SelectedLineCountLabel" type="Label" parent="ProjectContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 59.0
offset_bottom = 26.0
text = "Lines: 0"

[node name="SelectedColumnCountLabel" type="Label" parent="ProjectContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 63.0
offset_right = 149.0
offset_bottom = 26.0
text = "Columns: 0"
